Nisja e krijimit te statistika aplikimesh